--- a/package.json
+++ b/package.json
@@ -1,61 +1,12 @@
 {
-  "name": "blog",
+  "name": "Blog",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.html",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --config webpack-dev-server.config.js --progress --inline --colors",
-    "build": "webpack --config webpack-production.config.js --progress --colors",
-    "server": "nodemon ./server/server.js --exec babel-node"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/LuciusCao/Blog.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/LuciusCao/Blog/issues"
-  },
-  "homepage": "https://github.com/LuciusCao/Blog#readme",
-  "devDependencies": {
-    "apollo-server": "^0.3.3",
-    "babel-cli": "^6.18.0",
-    "babel-core": "^6.18.2",
-    "babel-loader": "^6.2.8",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-latest": "^6.16.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-2": "^6.18.0",
-    "babel-eslint": "^6.0.0-beta.6",
-    "eslint": "^2.4.0",
-    "eslint-config-airbnb": "^6.1.0",
-    "eslint-plugin-import": "^1.1.0",
-    "eslint-plugin-react": "^4.2.3",
-    "casual": "^1.5.8",
-    "css-loader": "^0.26.0",
-    "express": "^4.14.0",
-    "graphql": "^0.8.2",
-    "graphql-server-express": "^0.4.3",
-    "graphql-tools": "^0.8.3",
-    "html-webpack-plugin": "^2.24.1",
-    "lodash": "^4.17.2",
-    "mongoose": "^4.7.1",
-    "nodemon": "^1.11.0",
-    "react-redux": "^4.4.6",
-    "redux": "^3.6.0",
-    "style-loader": "^0.13.1",
-    "transfer-webpack-plugin": "^0.1.4",
-    "webpack": "^1.13.3",
-    "webpack-dev-server": "^1.16.2"
-  },
+  "main": "index.js",
+  "repository": "git@github.com:LuciusCao/Blog.git",
+  "author": "LuciusCao <lucius.cao@gmail.com>",
+  "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.15.2",
-    "material-ui": "^0.16.4",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
-    "react-redux": "^4.4.6",
-    "react-tap-event-plugin": "^2.0.1"
+    "react": "^15.5.3",
+    "react-dom": "^15.5.3"
   }
 }
