--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "LuciusCao <lucius.cao@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "next": "^2.1.0",
     "react": "^15.5.3",
     "react-dom": "^15.5.3"
   }
