--- a/package.json
+++ b/package.json
@@ -5,9 +5,20 @@
   "repository": "git@github.com:LuciusCao/Blog.git",
   "author": "LuciusCao <lucius.cao@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "dev": "next",
+    "build": "next build",
+    "start": "next start"
+  },
   "dependencies": {
     "next": "^2.1.0",
     "react": "^15.5.3",
     "react-dom": "^15.5.3"
+  },
+  "devDependencies": {
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-latest": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1"
   }
 }
