--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^15.5.3"
   },
   "devDependencies": {
+    "babel": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
