--- a/package.json
+++ b/package.json
@@ -13,13 +13,7 @@
   "dependencies": {
     "next": "^2.1.0",
     "react": "^15.5.3",
+    "react-apollo": "^1.0.1",
     "react-dom": "^15.5.3"
-  },
-  "devDependencies": {
-    "babel": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-latest": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1"
   }
 }
