--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "^2.1.0",
     "react": "^15.5.3",
     "react-apollo": "^1.0.1",
-    "react-dom": "^15.5.3"
+    "react-dom": "^15.5.3",
+    "react-router": "^4.1.1"
   }
 }
