--- a/package.json
+++ b/package.json
@@ -6,14 +6,25 @@
   "author": "LuciusCao <lucius.cao@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start"
+    "dev": "webpack-dev-server --devtool eval --progress --colors --hot --content-base build",
+    "build": "webpack -p"
   },
   "dependencies": {
+    "history": "^4.6.1",
+    "html-webpack-plugin": "^2.28.0",
+    "path": "^0.12.7",
     "react": "^15.5.3",
     "react-apollo": "^1.0.1",
     "react-dom": "^15.5.3",
-    "react-router": "^4.1.1"
+    "react-router": "^4.1.1",
+    "webpack": "^2.4.1",
+    "webpack-dev-server": "^2.4.4"
+  },
+  "devDependencies": {
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-latest": "^6.24.1",
+    "babel-preset-react": "^6.24.1"
   }
 }
