--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-apollo": "^1.0.1",
     "react-dom": "^15.5.3",
     "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.4"
   },
