--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^15.5.3",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
+    "styled-components": "^1.4.5",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.4"
   },
