--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "styled-components": "^1.4.5",
+    "webfontloader": "^1.6.27",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.4"
   },
