--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "html-webpack-plugin": "^2.28.0",
+    "lodash": "^4.17.4",
     "path": "^0.12.7",
+    "prop-types": "^15.5.8",
     "react": "^15.5.3",
     "react-apollo": "^1.0.1",
     "react-dom": "^15.5.3",
